--- a/12.自定义表情键盘/Base.lproj/Main.storyboard
+++ b/12.自定义表情键盘/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="6Bc-IA-0Ow">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="IhJ-fJ-WbN">
+                        <barButtonItem key="rightBarButtonItem" id="IhJ-fJ-WbN">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="qsv-2Q-E2l">
                                 <rect key="frame" x="276" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
